Fixed white space above header in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ html, body {
   overflow-y: auto;
   overflow-x: hidden;
   font-family: 'Inter', sans-serif;
+  position: absolute;
+  top: 0;
+  left: 0;
   -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
   scrollbar-width: none;  /* Hide scrollbar for Firefox */
 }
@@ -46,10 +49,14 @@ body::-webkit-scrollbar {
 }
 
 .App {
-  height: 100%;
   width: 100%;
+  min-height: 100vh;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
   text-align: center;
   font-family: 'Inter', sans-serif;
   min-height: 100vh;
