--- a/src/components/PageBackground/PageBackground.css
+++ b/src/components/PageBackground/PageBackground.css
@@ -10,6 +10,10 @@
   overflow-x: hidden;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
 }
 
 .page-background::-webkit-scrollbar {
